# cluster-experiment-runner

./: .gitignore  SETUP.md  TEST_RUN_REPORT.md  cer.yaml.example  pyproject.toml  spec 1.md
cluster/: experiment.sbatch.template  run_experiment.sh
cluster/singularity/: experiment.def
src/cer/: cli.py  config.py  db.py  mcp_server.py  secrets.py  slurm.py  ssh.py  wandb_query.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_mcp_server.py
