[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluster-experiment-runner"
version = "0.1.0"
description = "Submit, monitor, and cancel GPU experiments on SLURM clusters via SSH"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "wandb>=0.15.0",
    "mcp>=1.0.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
cer-mcp = "cer.mcp_server:main"
cer-secret = "cer.secrets:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cer"]
